--- a/index.html
+++ b/index.html
@@ -1,12 +1,9 @@
 <!DOCTYPE HTML>
 <!--
-	Aerial by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
 <html>
 	<head>
-		<title>Aerial by HTML5 UP</title>
+		<title>Kolla väder enkelt</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -21,14 +18,9 @@
 				<!-- Header -->
 					<header id="header">
 						<h1>BaraVäder</h1>
-						<p>Kolla väder enkelt från olika metrolog sidor
+						<p>Kolla väder enkelt från olika leverantörer
 						<nav>
 					</header>
-
-				<!-- Footer -->
-					<footer id="footer">
-						<span class="copyright">&copy; Untitled. Design: <a href="http://html5up.net">HTML5 UP</a>.</span>
-					</footer>
 
 			</div>
 		</div>
