--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
+	 <link rel="icon" href="icon.png" type="image" sizes="16x16">
 	<body class="is-preload">
 		<div id="wrapper">
 			<div id="bg"></div>
