--- a/index.html
+++ b/index.html
@@ -75,6 +75,10 @@
           <p class="intro-subtitle"><span class="text-slider-items">Kolla Väder enkelt,Olika leverantörer,SMHI,YR,Klart</span><strong class="text-slider"></strong></p>
           <!-- <p class="pt-3"><a class="btn btn-primary btn js-scroll px-4" href="#about" role="button">Learn More</a></p> -->
         </div>
+		<a class="weatherwidget-io" href="https://forecast7.com/sv/59d2815d21/orebro/" data-label_1="Örebro" data-label_2="Väder" data-theme="original" >Örebro Väder</a>
+<script>
+!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src='https://weatherwidget.io/js/widget.min.js';fjs.parentNode.insertBefore(js,fjs);}}(document,'script','weatherwidget-io-js');
+</script>
       </div>
     </div>
   </div>
