--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>DevFolio Bootstrap Template</title>
+  <title>BaraVäder</title>
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <meta content="" name="keywords">
   <meta content="" name="description">
@@ -75,10 +75,8 @@
           <p class="intro-subtitle"><span class="text-slider-items">Kolla Väder enkelt,Olika leverantörer,SMHI,YR,Klart</span><strong class="text-slider"></strong></p>
           <!-- <p class="pt-3"><a class="btn btn-primary btn js-scroll px-4" href="#about" role="button">Learn More</a></p> -->
         </div>
-		<a class="weatherwidget-io" href="https://forecast7.com/sv/59d2815d21/orebro/" data-label_1="Örebro" data-label_2="Väder" data-theme="original" >Örebro Väder</a>
-<script>
-!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src='https://weatherwidget.io/js/widget.min.js';fjs.parentNode.insertBefore(js,fjs);}}(document,'script','weatherwidget-io-js');
-</script>
+		<script src="https://apps.elfsight.com/p/platform.js" defer></script>
+<div class="elfsight-app-c6d5786e-c762-4170-bc4c-c6f24a3cca01"></div>
       </div>
     </div>
   </div>
@@ -89,6 +87,10 @@
   <!--/ Section Klart Start /-->
   <!--/ Section Klart End /-->
   <!--/ Section YR Start /-->
+  <section id="YR" class="YR-mf sect-pt4 route">
+    <div class="container">
+      <div class="row">
+  <iframe src='https://xn--vder24-bua.se/index.php/vader-widget/?widgettype=white&widgetcity=örebro' title='Väderwidget' style='height:250px; min-width:215px; width:100%; max-width:100%;' name='weatheriFrame' scrolling='0' frameborder='0' ></iframe>
   <!--/ Section YR End /-->
   <!--/ Section Om Start /-->
   <!--/ Section Om End /-->
