--- a/index.html
+++ b/index.html
@@ -41,22 +41,7 @@
       <div class="navbar-collapse collapse justify-content-end" id="navbarDefault">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link js-scroll active" href="#hem">hem</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link js-scroll" href="#SMHI">SMHI</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link js-scroll" href="#Klart">Klart</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link js-scroll" href="#YR">YR</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link js-scroll" href="#Om">Om</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link js-scroll" href="#Kontakt">Kontakt</a>
+            
           </li>
         </ul>
       </div>
@@ -72,13 +57,11 @@
         <div class="container">
           <!--<p class="display-6 color-d">Hello, world!</p>-->
           <h1 class="intro-title mb-4">BaraVäder</h1>
-          <p class="intro-subtitle"><span class="text-slider-items">Kolla Väder enkelt,Olika leverantörer,SMHI,YR,Klart</span><strong class="text-slider"></strong></p>
+          <p class="intro-subtitle"><span class="text-slider-items">Kolla Väder enkelt, inga konstigheter, bara väder inget annat, Kallt? ta på dig en jacka :), Sommarn kommer snart, lugna ner dig!, Gå ut det är fint väder! eller kanske inte, fåglar kan flyga och du kan?,Vädret idag är bra/dåligt, Va inte blyg, kolla här nedan för väder!, Visst är det fint väder idag, Tomten kommer snart lugna ner dig för fan, inget slår en varm sommar dag, glass glass är gott, snart är det jul igen, sommar eller inte du bestämmer inte, vädret är som det ska, vem styr vädret inte du inte jag kanske någon annan, fint ska det vara, nu har du kollat för länge gör något vettigt istället.</span><strong class="text-slider"></strong></p>
           <!-- <p class="pt-3"><a class="btn btn-primary btn js-scroll px-4" href="#about" role="button">Learn More</a></p> -->
-        </div>
-		<script src="https://apps.elfsight.com/p/platform.js" defer></script>
-<div class="elfsight-app-c6d5786e-c762-4170-bc4c-c6f24a3cca01"></div>
-      </div>
-    </div>
+		  
+   </div>
+   <iframe src="https://www.meteoblue.com/en/weather/widget/daily?geoloc=detect&days=7&tempunit=CELSIUS&windunit=METER_PER_SECOND&precipunit=MILLIMETER&coloured=monochrome&pictoicon=0&pictoicon=1&maxtemperature=0&maxtemperature=1&mintemperature=0&mintemperature=1&windspeed=0&windspeed=1&windgust=0&winddirection=0&winddirection=1&uv=0&humidity=0&precipitation=0&precipitation=1&precipitationprobability=0&precipitationprobability=1&spot=0&pressure=0&layout=dark"  frameborder="0" scrolling="NO" allowtransparency="true" sandbox="allow-same-origin allow-scripts allow-popups allow-popups-to-escape-sandbox" style="width: 378px; height: 303px"></iframe><div><!-- DO NOT REMOVE THIS LINK --><a href="https://www.meteoblue.com/en/weather/week/index?utm_source=weather_widget&utm_medium=linkus&utm_content=daily&utm_campaign=Weather%2BWidget" target="_blank">meteoblue</a></div>
   </div>
   <!--/ Intro Skew End /-->
 
@@ -87,10 +70,6 @@
   <!--/ Section Klart Start /-->
   <!--/ Section Klart End /-->
   <!--/ Section YR Start /-->
-  <section id="YR" class="YR-mf sect-pt4 route">
-    <div class="container">
-      <div class="row">
-  <iframe src='https://xn--vder24-bua.se/index.php/vader-widget/?widgettype=white&widgetcity=örebro' title='Väderwidget' style='height:250px; min-width:215px; width:100%; max-width:100%;' name='weatheriFrame' scrolling='0' frameborder='0' ></iframe>
   <!--/ Section YR End /-->
   <!--/ Section Om Start /-->
   <!--/ Section Om End /-->
