--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
   <link rel="shortcut icon" type="image/png" href="img/favicon.png">
 </head>
 <head>
+  <script data-ad-client="ca-pub-7905813151761151" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+</head>
+<head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
