--- a/index.html
+++ b/index.html
@@ -33,4 +33,17 @@
   </div>
   <script src="main.js"></script>
 </body>
+<body>
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- ads -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-5102622183417975"
+     data-ad-slot="4725220325"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
+</body>
 </html>
