--- a/index.html
+++ b/index.html
@@ -1,8 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+<body>
+</body>
 <head>
   <title></title>
   <link rel="shortcut icon" type="image/png" href="img/favicon.png">
+</head>
+<head>
+  <script data-ad-client="ca-pub-5102622183417975" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 </head>
 <head>
   <meta charset="UTF-8">
@@ -18,16 +23,32 @@
     </header>
     <main>
       <section class="location">
-        <div class="city">Örebro, SE</div>
-        <div class="date">Måndag 1 Juni 2020</div>
+        <div class="city"></div>
+        <div class="date"></div>
       </section>
       <div class="current">
-        <div class="temp">25<span>°c</span></div>
-        <div class="weather">Soligt</div>
-        <div class="hi-low">19°c / 26°c</div>
+        <div class="temp">Skriv in en plats eller använd GPS<span></span></div>
+        <button class=button onclick="getLocation();style.display = 'none'">Kolla väder efter min plats</button>
+        <div class="weather"></div>
+        <div class="hi-low"></div>
       </div>
     </main>
   </div>
   <script src="main.js"></script>
+</body>
+<body>
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- ads -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-5102622183417975"
+     data-ad-slot="4725220325"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
+</body>
+<body>
 </body>
 </html>
